[tool.poetry]
name = "ecom"
version = "0.1.0"
description = ""
authors = ["Doanh Luong <doanh.luong@sap.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.44"
psycopg2 = "^2.9.5"
alembic = "^1.8.1"
passlib = {extras = ["argon2"], version = "^1.7.4"}
email-validator = "^1.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.990"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

